web-infras/parser/tests/fixtures/esprima/ES6/super-property/invalid_super_not_inside_function/output.txt
[SyntaxError]: super() is only valid in derived class constructors (1,9)
1|var x = super();
 |       ^
[SyntaxError]: `super()` is only valid inside a class constructor of a subclass. Maybe a typo in the method name ('constructor') or not extending another class? (1,9)
1|var x = super();
 |       ^
